<?xml version="1.0"?>
<package format="2">
  <name>livox_control</name>
  <version>0.0.1</version>
  <description>A package to control Livox LiDAR sleep state</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
